--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
   "dependencies": {
     "antd": "^4.13.1",
     "antd-mobile": "^2.3.4",
+    "array-tree-filter": "^2.1.0",
     "babel-plugin-import": "^1.13.3",
     "dva": "^2.4.1",
+    "history": "^5.0.0",
+    "mock": "^0.1.1",
+    "mockjs": "^1.1.0",
+    "rc-form": "^2.4.12",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "sass": "^1.32.8"
   },
   "devDependencies": {
     "babel-plugin-dva-hmr": "^0.3.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^4.14.0",
     "eslint-config-umi": "^0.1.1",
     "eslint-plugin-flowtype": "^2.34.1",
