--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "antd": "^4.13.1",
     "antd-mobile": "^2.3.4",
     "array-tree-filter": "^2.1.0",
     "babel-plugin-import": "^1.13.3",
     "dva": "^2.4.1",
     "history": "^5.0.0",
+    "js-cookie": "^2.2.1",
     "mock": "^0.1.1",
     "mockjs": "^1.1.0",
     "rc-form": "^2.4.12",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "umi-request": "^1.3.5"
   },
   "devDependencies": {
     "babel-plugin-dva-hmr": "^0.3.2",
